@startuml

title __PERSONNAGES's Class Diagram__\n

  namespace  {
    namespace om.company {
      namespace personnages {
        abstract class com.company.personnages.Perso {
            - life : int
            - maxLife : int
            - maxStrength : int
            - minLife : int
            - minStrength : int
            - name : String
            - posPlayer : int
            - strength : int
            + Perso()
            + fuir()
            + getLife()
            + getMaxLife()
            + getMaxStrength()
            + getMinLife()
            + getMinStrength()
            + getName()
            + getPosition()
            + getPotion()
            + getStrength()
            + setLife()
            + setName()
            + setPosition()
            + setPotion()
            + setStrength()
            + toString()
        }
      }
    }
  }
  

  namespace  {
    namespace om.company {
      namespace personnages {
        class com.company.personnages.Warrior {
            + Warrior()
            + Warrior()
            + getWeapon()
            + setWeapon()
            + toString()
        }
      }
    }
  }
  

  namespace  {
    namespace om.company {
      namespace personnages {
        class com.company.personnages.Wizard {
            + Wizard()
            + Wizard()
            + getSpell()
            + setSpell()
            + toString()
        }
      }
    }
  }
  

  com.company.personnages.Perso o-- com.company.potions.Potion : potion
  com.company.personnages.Warrior -up-|> com.company.personnages.Perso
  com.company.personnages.Warrior o-- com.company.weapons.Weapon : weapon
  com.company.personnages.Wizard -up-|> com.company.personnages.Perso
  com.company.personnages.Wizard o-- com.company.spells.Spell : spell


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
